--- a/package.json
+++ b/package.json
@@ -1,83 +1,80 @@
 {
-  "name": "react-ts",
+  "name": "n-body-preoblem-ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev-ssg": "vite-react-ssg dev",
-    "build-ssg": "vite-react-ssg build",
     "dev": "vite",
     "build": "tsc && vite build",
+    "build-ssg": "vite-react-ssg build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "typecheck": "tsc --noEmit",
+    "serve": "serve dist"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@types/gif.js": "^0.2.5",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "better-react-mathjax": "^2.0.3",
+    "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.0",
-    "gif.js": "^0.2.0",
-    "gifshot": "^0.4.5",
-    "html2canvas": "^1.4.1",
-    "konva": "^9.3.6",
+    "framer-motion": "^11.5.4",
+    "konva": "^9.3.14",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.372.0",
-    "ode45-cash-karp": "^1.1.0",
     "odex": "3.0.0-rc.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.51.4",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.53.0",
     "react-katex": "^3.0.1",
     "react-konva": "^18.2.10",
-    "react-use": "^17.5.0",
-    "tailwind-merge": "^2.3.0",
+    "react-use": "^17.5.1",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "ts-functional-pipe": "^3.1.2",
     "uuid": "^9.0.1",
-    "vaul": "^0.9.1",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "vaul": "^0.9.2",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.2",
+    "@types/node": "^20.16.5",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/react-katex": "^3.0.4",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "eslint-plugin-tailwindcss": "^3.17.0",
-    "postcss": "^8.4.38",
-    "react-router-dom": "^6.23.1",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.11",
-    "vite-react-ssg": "^0.6.2",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "postcss": "^8.4.45",
+    "react-router-dom": "^6.26.1",
+    "serve": "^14.2.3",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.3",
+    "vite-react-ssg": "^0.6.4",
     "vitest": "^1.6.0"
   }
 }
