using local pkg

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "konva": "^9.3.14",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.372.0",
-    "odex": "3.0.0-rc.4",
+    "odex": "file:odex-3.0.0-rc.4.tgz",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
