--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "n-body-preoblem-ts",
+  "homepage": "https://github.com/matthiasrondenet/n-body-problem/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
