--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     },
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -28,6 +28,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src", "global.d.ts"],
-  "exclude": ["node_modules", "node_modules/*"],
+  "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
