--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,6 +10,6 @@
     "types": [],
     "noUnusedParameters": false
   },
-  "exclude": ["node_modules", "node_modules/*"],
+  "exclude": ["node_modules"],
   "include": ["vite.config.ts"]
 }
