--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Test
+        run: pnpm test
+
       - name: Build
         run: pnpm build-ssg
 
@@ -59,7 +62,6 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload dist folder
-
           path: "./dist"
       - name: Deploy to GitHub Pages
         id: deployment
